result

Run cpplint

./check.sh: line 119: cpplint: command not found

Run clang-tidy

20 warnings generated.
58 warnings generated.
58 warnings generated.
58 warnings generated.
/home/student/Tema1/t1_schelet/imageprocessing.c:29:8: error: variable 'r' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
                        int r,g,b;
                            ^
                              = 0
/home/student/Tema1/t1_schelet/imageprocessing.c:29:10: error: variable 'g' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
                        int r,g,b;
                              ^
                                = 0
/home/student/Tema1/t1_schelet/imageprocessing.c:29:12: error: variable 'b' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
                        int r,g,b;
                                ^
                                  = 0
/home/student/Tema1/t1_schelet/imageprocessing.c:131:8: error: narrowing conversion from 'int' to 'float' [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
        val = (int)val;
              ^
/home/student/Tema1/t1_schelet/imageprocessing.c:133:11: error: 255 is a magic number; consider replacing it with a named constant [cppcoreguidelines-avoid-magic-numbers,-warnings-as-errors]
        if(val > 255) val = 255;
                 ^
/home/student/Tema1/t1_schelet/imageprocessing.c:133:22: error: 255 is a magic number; consider replacing it with a named constant [cppcoreguidelines-avoid-magic-numbers,-warnings-as-errors]
        if(val > 255) val = 255;
                            ^
/home/student/Tema1/t1_schelet/imageprocessing.c:134:9: error: narrowing conversion from 'float' to 'int' [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
        return val;
               ^
/home/student/Tema1/t1_schelet/imageprocessing.c:149:11: error: narrowing conversion from 'int' to 'float' [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
                                        r += image[i1][j1][0] * filter[i2][j2];
                                             ^
/home/student/Tema1/t1_schelet/imageprocessing.c:150:11: error: narrowing conversion from 'int' to 'float' [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
                                        g += image[i1][j1][1] * filter[i2][j2];
                                             ^
/home/student/Tema1/t1_schelet/imageprocessing.c:151:11: error: narrowing conversion from 'int' to 'float' [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
                                        b += image[i1][j1][2] * filter[i2][j2];
                                             ^
/home/student/Tema1/t1_schelet/interactive.c:27:14: error: 256 is a magic number; consider replacing it with a named constant [cppcoreguidelines-avoid-magic-numbers,-warnings-as-errors]
        char buffer[256];
                    ^
/home/student/Tema1/t1_schelet/interactive.c:41:17: error: variable 'N' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int N, M;
                ^
                  = 0
/home/student/Tema1/t1_schelet/interactive.c:41:20: error: variable 'M' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int N, M;
                   ^
                     = 0
/home/student/Tema1/t1_schelet/interactive.c:53:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index;
                ^
                      = 0
/home/student/Tema1/t1_schelet/interactive.c:61:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index;
                ^
                      = 0
/home/student/Tema1/t1_schelet/interactive.c:69:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index;
                ^
                      = 0
/home/student/Tema1/t1_schelet/interactive.c:78:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, x, y, w, h;
                ^
                      = 0
/home/student/Tema1/t1_schelet/interactive.c:78:24: error: variable 'x' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, x, y, w, h;
                       ^
                         = 0
/home/student/Tema1/t1_schelet/interactive.c:78:27: error: variable 'y' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, x, y, w, h;
                          ^
                            = 0
/home/student/Tema1/t1_schelet/interactive.c:78:30: error: variable 'w' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, x, y, w, h;
                             ^
                               = 0
/home/student/Tema1/t1_schelet/interactive.c:78:33: error: variable 'h' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, x, y, w, h;
                                ^
                                  = 0
/home/student/Tema1/t1_schelet/interactive.c:86:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, rows, cols, R, G, B;
                ^
                      = 0
/home/student/Tema1/t1_schelet/interactive.c:86:24: error: variable 'rows' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, rows, cols, R, G, B;
                       ^
                            = 0
/home/student/Tema1/t1_schelet/interactive.c:86:30: error: variable 'cols' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, rows, cols, R, G, B;
                             ^
                                  = 0
/home/student/Tema1/t1_schelet/interactive.c:86:36: error: variable 'R' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, rows, cols, R, G, B;
                                   ^
                                     = 0
/home/student/Tema1/t1_schelet/interactive.c:86:39: error: variable 'G' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, rows, cols, R, G, B;
                                      ^
                                        = 0
/home/student/Tema1/t1_schelet/interactive.c:86:42: error: variable 'B' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index, rows, cols, R, G, B;
                                         ^
                                           = 0
/home/student/Tema1/t1_schelet/interactive.c:93:17: error: variable 'index_dst' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index_dst, index_src, x, y;
                ^
                          = 0
/home/student/Tema1/t1_schelet/interactive.c:93:28: error: variable 'index_src' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index_dst, index_src, x, y;
                           ^
                                     = 0
/home/student/Tema1/t1_schelet/interactive.c:93:39: error: variable 'x' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index_dst, index_src, x, y;
                                      ^
                                        = 0
/home/student/Tema1/t1_schelet/interactive.c:93:42: error: variable 'y' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index_dst, index_src, x, y;
                                         ^
                                           = 0
/home/student/Tema1/t1_schelet/interactive.c:100:17: error: variable 'size' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int size;
                ^
                     = 0
/home/student/Tema1/t1_schelet/interactive.c:119:17: error: variable 'index_img' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index_img, index_filter;
                ^
                          = 0
/home/student/Tema1/t1_schelet/interactive.c:119:28: error: variable 'index_filter' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index_img, index_filter;
                           ^
                                        = 0
/home/student/Tema1/t1_schelet/interactive.c:127:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index;
                ^
                      = 0
/home/student/Tema1/t1_schelet/interactive.c:143:17: error: variable 'index' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors]
            int index;
                ^
                      = 0
Suppressed 22 warnings (22 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
36 warnings treated as errors
